Resolve aws access problem

--- a/Backend/core/.env
+++ b/Backend/core/.env
@@ -13,3 +13,5 @@ EMAIL_PORT=2525
 AWS_ACCESS_KEY_ID=AKIA5EUKBLJH5LCDUSMA
 AWS_SECRET_ACCESS_KEY=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
 AWS_STORAGE_BUCKET_NAME=book-service-bucket
+AWS_S3_REGION_NAME=eu-central-1
+AWS_S3_SIGNATURE_VERSION=s3v4
